[package]
name = "keyhole"
version = "0.1.0"
authors = ["Tobias K <6317548+theCalcaholic@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
